<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/color_header"
        android:gravity="center"
        android:text="@string/text_cheap_flights"
        android:textColor="@color/color_header_text"
        android:textSize="@dimen/size_header_text"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/text_simple"
        android:textSize="@dimen/size_button"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/text_difficult"
        android:textSize="@dimen/size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:srcCompat="@drawable/plane_down"
        tools:layout_editor_absoluteX="37dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/left"
        tools:layout_editor_absoluteX="37dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:srcCompat="@drawable/plain_up"
        tools:layout_editor_absoluteX="37dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/right"
        tools:layout_editor_absoluteX="37dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_left"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/text_lane_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/text_departure"
        android:textColor="@color/color_main_text"
        android:textSize="@dimen/size_text_picture"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/text_plain_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_arrive"
        android:textColor="@color/color_main_text"
        android:textSize="@dimen/size_text_picture"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/text_lane_down" />

    <TextView
        android:id="@+id/text_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_date"
        android:textColor="@color/color_main_text"
        android:textSize="@dimen/size_text_picture"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text_plain_up" />

    <TextView
        android:id="@+id/text_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_return_date"
        android:textSize="@dimen/size_text_picture"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/text_right" />

    <TextView
        android:id="@+id/text_departure_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/text_airport"
        android:textSize="@dimen/size_main_text"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/text_lane_down" />

    <TextView
        android:id="@+id/text_arrival_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/text_airport"
        android:textSize="@dimen/size_main_text"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/text_plain_up" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/text_thursday"
        android:textSize="@dimen/size_main_text"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/text_right" />

    <TextView
        android:id="@+id/text_dayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/text_dayOfWeek"
        android:textSize="@dimen/size_main_text"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/text_left" />

    <Button
        android:id="@+id/find_tickets"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="500dp"
        android:background="@color/color_footer"
        android:gravity="center"
        android:text="@string/text_find"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/text_passengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="63dp"
        android:text="@string/text_passengers"
        android:textSize="@dimen/size_main_text"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintStart_toEndOf="@+id/text_0"
        app:srcCompat="@drawable/child" />

    <ImageView
        android:id="@+id/image_men"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/men" />

    <ImageView
        android:id="@+id/image_small_men"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintStart_toEndOf="@+id/text_1"
        app:srcCompat="@drawable/men" />

    <TextView
        android:id="@+id/text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_zero"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintStart_toEndOf="@+id/image_small_men" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintStart_toEndOf="@+id/image_men" />

    <TextView
        android:id="@+id/text_0_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_zero"
        app:layout_constraintBottom_toTopOf="@+id/find_tickets"
        app:layout_constraintStart_toEndOf="@+id/image_child" />

</androidx.constraintlayout.widget.ConstraintLayout>